scrollbar Fixed

--- a/Planche/sass/style.scss
+++ b/Planche/sass/style.scss
@@ -103,7 +103,7 @@ body{
   background-color: $side_back;
   box-shadow: 1px -1px 3px 3px rgba(0, 0, 0, 0.2);
   // padding-top: 60px;
-  overflow: auto;
+  overflow: hidden;
 }
 .drawer-hamburger-icon{
   background-color: $side_menu_font;
